@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0

left to right direction

package "UI" #f0f0f0{
    class ViewDetailsEntryUI {
    }

}
package "Core" #f0f0f0{

    package "Controller" #dddddd{

        class ViewDetailsEntryController {
            +ceateViewDetailsEntryController()
        }

        ViewDetailsEntryUI ..>  ViewDetailsEntryController


    }

    package "Domain" #dddddd{

        package "DTO" #dddddd{

            class EntryDto {
                +registerNewTask(entryDto): String
            }

        }


        package "Repository" #bbbbbb{

            class Repositories {
                - static instance : Repositories
                + getInstance() : Repositories
                + getEntryRepository() : EntryRepository
                - Repositories()
            }

            ViewDetailsEntryController ..> Repositories : repositories

            Repositories --> Repositories : instance

            class EntryRepository {
                +cancelEntry(entryDto)
            }

            Repositories "1" --> "1" EntryRepository : entryRepository
            ViewDetailsEntryController ..> EntryRepository: entryRepository

        }

        package "Model" #bbbbbb{

            class Entry {
                -status : EntryState
                +setStatus()
            }

            EntryRepository "1" --> "*" Entry

        }

            EntryDto "1" --> "1" Entry
            EntryRepository "1" --> "1" EntryDto


    }
}

@enduml
